# Planner

./: .gitignore  Dockerfile  Makefile  README.md
.github/: README.md
.github/workflows/: build.yml  docs.yml
client/: Dockerfile  Makefile
client/workspace/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test
client/workspace/app/: CMakeLists.txt  Makefile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  socketUsage.cpp
client/workspace/app/include/network/: ClientSocket.hpp
client/workspace/app/src/network/: ClientSocket.cpp
client/workspace/build-app-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  app  build.ninja
client/workspace/build-app-Desktop-Debug/app_autogen/: deps  moc_predefs.h
client/workspace/build-app-Desktop-Debug/app_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
common/: CMakeLists.txt  Makefile  test_app
common/data/: input_data.json  schedule.json
common/include/: MessageAssembler.hpp  MessageFragmenter.hpp  MessageFrame.hpp  ScheduleData.hpp
common/include/network/: ISocket.hpp
common/src/: MessageAssembler.cpp  MessageFragmenter.cpp  test.cpp
docs/: AlgorithmHandler_8hpp_source.html  AlgorithmInfo_8hpp_source.html  AlgorithmManager_8hpp_source.html  AlgorithmRunner_8hpp_source.html  AlgorithmScanner_8hpp_source.html  CommandHandler_8hpp_source.html  DataHandler_8hpp_source.html  DebugHandler_8hpp_source.html  HandlerDispatcher_8hpp_source.html  IMessageHandler_8hpp_source.html  MessageAssembler_8hpp_source.html  MessageFragmenter_8hpp_source.html  MessageFrame_8hpp_source.html  MessageProcessor_8hpp_source.html  ScheduleData_8hpp_source.html  ServerSocket_8hpp_source.html  System_8hpp_source.html  annotated.html  classAlgorithmHandler-members.html  classAlgorithmHandler.html  classAlgorithmHandler__inherit__graph.map  classAlgorithmHandler__inherit__graph.md5  classAlgorithmManager-members.html  classAlgorithmManager.html  classAlgorithmManager__coll__graph.map  classAlgorithmManager__coll__graph.md5  classAlgorithmRunner-members.html  classAlgorithmRunner.html  classAlgorithmRunner__coll__graph.map  classAlgorithmRunner__coll__graph.md5  classAlgorithmScanner-members.html  classAlgorithmScanner.html  classAlgorithmScanner__coll__graph.map  classAlgorithmScanner__coll__graph.md5  classCommandHandler-members.html  classCommandHandler.html  classCommandHandler__coll__graph.map  classCommandHandler__coll__graph.md5  classDataHandler-members.html  classDataHandler.html  (+134 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
server/: Dockerfile  Makefile
server/workspace/: CMakeCache.txt  CMakeLists.txt  Communictaion.md  Doxyfile  main.cpp  test  test_client.cpp
server/workspace/algorithms/simple_test/: algorithm.cpp  info.json
server/workspace/data/: input_data.json
server/workspace/include/algorithm/: AlgorithmInfo.hpp  AlgorithmManager.hpp  AlgorithmRunner.hpp  AlgorithmScanner.hpp
server/workspace/include/commands/: CommandDispatcher.hpp  HandlerDispatcher.hpp  IMessageHandler.hpp
server/workspace/include/commands/handlers/: CommandHandler.hpp  DataHandler.hpp  DebugHandler.hpp
server/workspace/include/control/: HandlerDispatcher.hpp
server/workspace/include/control/handlers/: AlgorithmHandler.hpp  CommandHandler.hpp  DataHandler.hpp  DebugHandler.hpp
server/workspace/include/core/: System.hpp
server/workspace/include/message/: MessageAssembler.hpp  MessageFragmenter.hpp  MessageFrame.hpp  MessageProcessor.hpp
server/workspace/include/network/: ServerSocket.hpp
server/workspace/include/schedule/: ScheduleData.hpp
server/workspace/markdowns/: ALGORITHM_ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CONSTRAINT_SYSTEM.md  Communictaion.md
server/workspace/src/: main.cpp
server/workspace/src/algorithm/: AlgorithmInfo.cpp  AlgorithmManager.cpp  AlgorithmRunner.cpp  AlgorithmScanner.cpp
server/workspace/src/commands/: CommandDispatcher.cpp  HandlerDispatcher.cpp
server/workspace/src/commands/handlers/: CommandHandler.cpp  DataHandler.cpp  DebugHandler.cpp
server/workspace/src/control/: HandlerDispatcher.cpp
server/workspace/src/control/handlers/: AlgorithmHandler.cpp  CommandHandler.cpp  DataHandler.cpp  DebugHandler.cpp
server/workspace/src/core/: System.cpp
server/workspace/src/message/: MessageAssembler.cpp  MessageFragmenter.cpp  MessageProcessor.cpp
server/workspace/src/network/: ServerSocket.cpp
workspace/: CMakeLists.txt  main.cpp
